syntax = "proto3";

package paper;

import "definitions/validate/Validate.proto";
import "definitions/user/AuthorBean.proto";

option go_package = "github.com/yb2020/odoc/proto/gen/go/paper";

// 论文版本类型
enum PaperVersionType {
  PAPER_LINK = 0;
  PAPER_PDF = 1;
}

message PaperVersionInfo {
  PaperVersionType type = 1;
  string name = 2;
  string pdfId = 3;
  string jumpUrl = 4;
  bool curVersion = 5;
  bool lastVersion = 6;
  string datePrefix = 7;
}

// @api_path: /api/paper/versions
// @method: GET
// @content-type: application/json
// @summary: 获取论文版本列表
message GetPaperVersionsRequest {
  string paperId = 1 [(validate.rules).string = {min_len: 1}];
}   

message GetPaperVersionsResponse {
  repeated PaperVersionInfo publicVersions = 1;
  repeated PaperVersionInfo privateVersions = 2;
}


/**
 * @api_path: /api/paper/getPaperDetailInfo
 * @method: GET
 * @content-type: application/json
 * @summary: 获取论文详情
 */
message GetPaperDetailInfoRequest {
  string paperId = 1 [(validate.rules).string = {min_len: 1}];
}

// 论文详情INFO
message PaperDetailInfo {
  // ==论文基本信息== //
  string paperId = 1; // 论文id
  string title = 2; // 标题
  string publishDate = 3; // 发布时间
  string originalAbstract = 4; // 原文摘要
  repeated BasePaperAuthorInfo authorList = 5; // 作者信息
  repeated BasePaperTagInfo paperTagList = 6; // 论文标签
  int32 referenceCount = 7; // 引用数
  int32 citationCount = 8; // 被引用数
  repeated string venues = 9; // 会议/期刊列表
  string primaryVenue = 10; // 主会议/期刊
  repeated string relatedUrls = 11; // 相关url列表
  repeated PaperUrlsBean paperUrlList = 12; // 相关url列表
  repeated string venueTags = 13; // venue标签列表
  string doi = 14; // DOI信息字段
  bool newPaper = 15; // 标记是否为新生成的论文

  // ==论文其他字段==//
  int32 noteCount = 16; // 笔记数
  int32 collectCount = 17; // 收藏数
  string pdfId = 18; // pdfId
  bool hasPublicPdf = 19; // 是否有公开pdf
  bool hasPrivatePdf = 20; // 是否有私有pdf
  int32 questionAnswerCount = 21; // 问答数
  AbstractInfoVo abstractTranslationInfo = 22; // 笔记-摘要信息
  bool isCollected = 23; // 是否收藏了该论文
  repeated PaperResourceVO paperResources = 24; // 论文精读数据
  bool showPaperDetail = 25; // 是否展示论文详情页
  ReadStatusEnum readStatus = 26; // 读取状态
  uint64 paperCommentedCount = 27; // 同行评审的人数
  MachineTranslationInfo machineTranslationInfo = 28; // 机器翻译信息
  string userDocId = 29; // 用户文档id
  bool showMachineTranslationButton = 30; // 是否展示机器翻译按钮
}

// 论文基本信息
message BasePaperInfo {
  string paperId = 1; // 论文id
  string title = 2; // 标题
  string publishDate = 3; // 发布时间
  string originalAbstract = 4; // 原文摘要
  repeated BasePaperAuthorInfo authorList = 5; // 作者信息
  repeated BasePaperTagInfo paperTagList = 6; // 论文标签
  int32 referenceCount = 7; // 引用数
  int32 citationCount = 8; // 被引用数
  repeated string venues = 9; // 会议/期刊列表
  string primaryVenue = 10; // 主会议/期刊
  repeated string relatedUrls = 11; // 相关url列表
  repeated PaperUrlsBean paperUrlList = 12; // 相关url列表
  repeated string venueTags = 13; // venue标签列表
  string doi = 14; // DOI信息字段
  bool newPaper = 15; // 标记是否为新生成的论文
}

// 作者信息
message BasePaperAuthorInfo {
  string id = 1; // 作者id
  string name = 2; // 作者名称
  bool isAuthentication = 3; // 是否认证作者
}

// 论文标签
message BasePaperTagInfo {
  string id = 1; // 标签id
  string name = 2; // 标签名称
  int32 level = 3; // 标签级别
}

// 论文url
message PaperUrlsBean {
  string sourceType = 1; // 源类型
  string url = 2; // url
  string publishDate = 3; // 发布时间
  string venue = 4; // 会议/期刊
}

// 摘要信息
message AbstractInfoVo {
  user.AuthorBean bestAbsAuthor = 1; // 最佳摘要作者
  string bestAbsContent = 2; // 最佳摘要内容
  int32 totalCount = 3; // 总数
  int64 bestAbsModifyTime = 4; // 最佳摘要修改时间
}

// 论文资源
message PaperResourceVO {
  string id = 1; // 资源id
  string paperId = 2; // 论文id
  string paperTitle = 3; // 论文标题
  string resourceUrl = 4; // 资源url
  string resourceTitle = 5; // 资源标题
}

message MachineTranslationInfo {
  TranslationSourceEnum translationSource = 1; // 机器翻译来源
  string translation = 2; // 机器翻译内容
}

enum ReadStatusEnum {
  READABLE_PUBLIC = 0;
  READABLE_PRIVATE = 1;
  UNREADABLE = 2;
}

// 机器翻译来源
enum TranslationSourceEnum {
  MANUAL = 0;
  YOUDAO = 1;
}
